# 3d-game

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  fb.bat  fbrun.bat  rb.bat  rbrun.bat  run.bat
.cache/clangd/index/: glew.h.3BF8A0059620BB50.idx  glfw3.h.0129E7A02088DEC2.idx  main.cpp.DDC9ED528289FA52.idx
assets/shaders/: basic.shader
objs/: main.d
src/: main.cpp
